<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/F"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <EditText
        android:id="@+id/eTTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/search_on_IMDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTTitle" />

    <Button
        android:id="@+id/bScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/your_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSearch" />

    <ImageView
        android:id="@+id/iVPoster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bScore"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tVTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tVYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iVPoster"
        app:layout_constraintTop_toBottomOf="@+id/bScore"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Название фильма" />

    <TextView
        android:id="@+id/tVYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tVRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tVTitle"
        app:layout_constraintTop_toBottomOf="@+id/tVTitle"
        tools:text="Год выпуска" />

    <TextView
        android:id="@+id/tVRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tVGenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tVTitle"
        app:layout_constraintTop_toBottomOf="@+id/tVYear"
        tools:text="Рейтинг" />

    <TextView
        android:id="@+id/tVGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tVScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tVTitle"
        app:layout_constraintTop_toBottomOf="@+id/tVRating"
        tools:text="Жанр" />

    <TextView
        android:id="@+id/tVScores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tVTitle"
        app:layout_constraintTop_toBottomOf="@+id/tVGenre"
        tools:text="Оценки" />

    <ProgressBar
        android:id="@+id/pB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSearch" />

    <TextView
        android:id="@+id/tVIsEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty"
        android:textSize="64sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iVPoster" />

</androidx.constraintlayout.widget.ConstraintLayout>